little cleaning, refactoring, polishing